# policy-eval

./: README.md  pyproject.toml
src/policy_eval/: __init__.py
src/policy_eval/abstractions/: actor.py  domain.py  metric.py  policy.py
src/policy_eval/core/: rng.py  types.py
src/policy_eval/engine/: aggregate.py  compare.py  evaluate.py  experiment.py  pareto.py  simulator.py
tests/: test_evaluate.py  test_fair_randomness.py  test_metric_purity.py  test_pareto.py  test_policy_isolation.py  test_public_api.py  test_reproducibility.py
