[project]
name = "policy-eval"
version = "0.1.0"
description = "A simulation-based framework for evaluating and comparing policies in systems with human behavior under uncertainty."
authors = [
    { name = "Manav Mehta" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = []

[tool.poetry]
packages = [{ include = "policy_eval", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
