[project]
name = "policy-eval"
version = "0.1.0"
description = "A simulation-based framework for evaluating and comparing policies in systems with human behavior under uncertainty."
authors = [
    { name = "Manav Mehta" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = ["numpy>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policy_eval"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
